--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "mirotone": "5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "vite": "3.0.3",
     "@mirohq/websdk-types": "latest",
+    "@types/node": "^18.8.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "4.9.5",
-    "@types/node": "^18.8.2"
+    "vite": "3.0.3"
   }
 }
